--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
         <ng-include src="'app/html/page.html'" onload="pageOnload()"></ng-include>
 
-        <canvas class="oa" id="canvas" width="600" height="600"></canvas>
+        <div class="oa" id="canvas"></div>
 
         <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-        <script type="text/javascript" src="app/js/blur.js"></script>
-        <script type="text/javascript" src="app/js/waterripple.js"></script>
+        <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script type="text/javascript" src="app/js/jquery.ripples.js"></script>
         <script type="text/javascript" src="app/js/app.js"></script>
     </body>
 </html>
