--- a/app/html/page.html
+++ b/app/html/page.html
@@ -1,7 +1,7 @@
 <div ng-class="{ show :currentStage === 1}" class="container oa">
-    <p>やはり私はもえのことを忘れられなくて<br/>
-        もう一回チャンスが欲しいと<br/>
-        このサイトを作りました
+    <p>やはり私、<br/>もえのことを好きです、ずっと<br/>
+        もう一度チャンスが欲しい<br/>
+        この願いでこのサイトを作りました
     </p>
 </div>
 <div ng-class="{ show :currentStage === 2 && showFlag}" class="container oa">
@@ -9,11 +9,14 @@
     </p>
 </div>
 <div ng-class="{ show :currentStage === 3 && showFlag}" class="container oa">
-    <p>いやの思い出をさせてごめん。</p>
+    <p>不愉快な思いをさせてごめん。</p>
 </div>
 <div ng-class="{ show :currentStage === 4 && showFlag}" class="container oa">
-    <p>自分はもえの理想にほど遠いかもしれないけど、<br/>近づける努力を精一杯する！<br/>凹むけど、諦めない。<br/>挫折するけど、立ち向かう。<br/>いまの自分はもえが今までと付き合ってきた男性と比較して女の子を優しくすることができないし、<br/>ロマンも知らないし、<br/>けれども、頑張ろう！と思ってる。</p>
+    <p>自分はもえの理想からめっちゃ離れているかもしれないんだけど、<br/>近づけるためにいっぱい努力する！<br/>いまの自分は彼氏としてもえにふさわしくないとわかっている、<br/>ロマンも知らないし、<br/>人を優しくすることもわからないし、<br/>けれども、頑張ろう！と思ってる。</p>
 </div>
 <div ng-class="{ show :currentStage === 5 && showFlag}" class="container oa">
-    <p>日本語が下手の私が精一杯知恵を絞って書いた文章だから、<br/>私の気持ち。。。伝わるといいね</p>
+    <p>日本語が下手の私がたくさんの知恵を絞って書いた文章だから、<br/>私の気持ち。。。伝わるといいね</p>
+</div>
+<div ng-class="{ show :currentStage === 6 && showFlag }" class="container oa">
+    <img width="100" height="100" class="spinner" src="app/img/spinner.gif">
 </div>
