--- a/app/html/page.html
+++ b/app/html/page.html
@@ -1,21 +1,23 @@
 <div ng-class="{ show :currentStage === 1}" class="container oa">
-    <p>やはり私、<br/>もえのことを好きです、ずっと<br/>
-        もう一度チャンスが欲しい<br/>
-        この願いでこのサイトを作りました
+    <p>aaaaaa<br/>あああああ<br/>
+        ああああああああ<br/>
     </p>
 </div>
 <div ng-class="{ show :currentStage === 2 && showFlag}" class="container oa">
-    <p>私、<br/>もえと出会って、<br/>初めて人を大事にしようと思った。<br/>けど、<br/>下手くそで自分が好きな人の前に素直になれず<br/>オープンスペースのとき格好だけつけて冷たくして。
+    <p>あああ<br/>あああああ<br/>ああああああ<br/>あああああああああ<br/>あああああああああああああああああああああああ
     </p>
 </div>
 <div ng-class="{ show :currentStage === 3 && showFlag}" class="container oa">
-    <p>自分はもえの理想からめっちゃ離れているかもしれないんだけど、<br/>近づけるためにいっぱい努力する！<br/>いまの自分は彼氏としてもえにふさわしくないとわかっている、<br/>ロマンも知らないし、<br/>人を優しくすることもわからないし、<br/>けれども、頑張ろう！と思ってる。</p>
+    <p>あああ<br/>あああああ<br/>ああああああ<br/>あああああああああ<br/>あああああああああああああああああああああああ
+    </p>
 </div>
 <div ng-class="{ show :currentStage === 4 && showFlag}" class="container oa">
-    <p>日本語が下手の私がたくさんの知恵を絞って書いた文章だから、<br/>私の気持ち。。。伝わるといいね</p>
+    <p>あああ<br/>あああああ<br/>ああああああ<br/>あああああああああ<br/>あああああああああああああああああああああああ
+    </p>
 </div>
 <div ng-class="{ show :currentStage === 5 && showFlag}" class="container oa">
-    <p>もう一度チャンスをもらえませんか。</p>
+    <p>あああ<br/>あああああ<br/>ああああああ<br/>あああああああああ<br/>あああああああああああああああああああああああ
+    </p>
 </div>
 <div ng-class="{ show :currentStage === 6 && showFlag }" class="container oa">
     <button>YES</button>&nbsp;or&nbsp;<button>NO</button>
